--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -164,6 +164,10 @@ h2 {
     padding: 8px 16px;
     font-size: 20px;
     letter-spacing: -1px;
+
+    @media (max-width: 600px) {
+      font-size: 15px;
+    }
   }
 }
 
@@ -176,12 +180,13 @@ h2 {
 
     .imageCont {
       clip-path: polygon(0% 0%, 100% 60px, 100% 100%, 0% 90%);
-      height: 500px;
+      background-repeat: no-repeat;
+      background-size: cover;
       overflow: hidden;
+      min-height: 500px;
 
-      img {
-        width: 100%;
-        display: block;
+      @media (max-width: 600px) {
+        
       }
     }
 
@@ -191,6 +196,10 @@ h2 {
       bottom: 30px;
       left: 0;
       padding: 40px;
+
+      @media (max-width: 900px) {
+        width: 70%;
+      }
     }
 
     .readMore {
@@ -214,11 +223,19 @@ h2 {
       letter-spacing: -2px;
       line-height: 1.2em;
       text-shadow: 0 0 30px rgba(#000, 0.5);
+
+      @media (max-width: 600px) {
+        font-size: 2.2em;
+      }
     }
 
     p {
       font-size: 1.1em;
       text-shadow: 0 0 30px rgba(#000, 0.5);
+
+      @media (max-width: 600px) {
+          font-size: 1em;
+        }
     }
 
     &:hover {
